--- a/FPL_Tool.html
+++ b/FPL_Tool.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/2.2.1/chartjs-plugin-annotation.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
     <div id="loadingOverlay" class="loading-overlay" style="display: none;">
@@ -20,15 +21,61 @@
         <div id="progressBar" class="progress-bar"></div>
     </div>
 
-    <div class="container">
+    <!-- Login Screen -->
+    <div id="loginScreen" class="login-screen" style="display: none;">
+        <div class="login-container">
+            <div class="login-header">
+                <div class="login-icon">⚽</div>
+                <h1>FPL Draft Analytics</h1>
+                <p class="login-subtitle">הכלי המתקדם לניתוח ליגות דראפט פנטזי</p>
+            </div>
+            <div class="login-content">
+                <p class="login-description">
+                    קבל גישה לניתוחים מתקדמים, <strong>חיזויי ביצועים</strong>, מטריצות השוואה ו<strong>המלצות חכמות</strong> לליגת הדראפט שלך
+                </p>
+                <button id="googleSignInBtn" class="google-signin-btn">
+                    <svg class="google-icon" viewBox="0 0 24 24">
+                        <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/>
+                        <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
+                        <path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
+                        <path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
+                    </svg>
+                    <span>התחבר עם Google</span>
+                </button>
+                <div class="demo-mode">
+                    <button id="demoModeBtn" class="demo-btn">
+                        <span>👁️</span>
+                        <span>צפייה במצב דמו</span>
+                    </button>
+                    <p class="demo-note">מצב דמו מאפשר <strong>צפייה בנתונים אמיתיים</strong> ללא אפשרות לשמור שינויים</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" id="mainApp" style="display: none;">
     <div class="header">
-
-        <h1>⚽ FPL Pro Analytics Hub</h1>
-
-        <p class="subtitle">ניתוח מתקדם | ציון דראפט חכם | תובנות עמוקות</p>
-
-        <p id="lastUpdated" class="subtitle" style="font-size: 0.8em; margin-top: 5px;"></p>
-
+        <div class="header-top">
+            <div class="header-left">
+                <h1>⚽ FPL Pro Analytics Hub</h1>
+                <p class="subtitle">ניתוח מתקדם | ציון דראפט חכם | תובנות עמוקות</p>
+            </div>
+            <div class="header-right">
+                <div class="user-info" id="userInfo" style="display: none;">
+                    <img id="userPhoto" class="user-photo" src="" alt="User">
+                    <div class="user-details">
+                        <span id="userName" class="user-name"></span>
+                        <span id="userMode" class="user-mode"></span>
+                    </div>
+                    <button id="logoutBtn" class="logout-btn" title="התנתק">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9"/>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <p id="lastUpdated" class="subtitle" style="font-size: 0.8em; margin-top: 10px;"></p>
     </div>
     <div class="tab-nav">
         <button id="tabPlayersBtn" class="tab-button active" onclick="showTab('players')">נתוני שחקנים</button>
@@ -282,10 +329,8 @@
 
             <h2 id="visualizationTitle"></h2>
 
-            <div style="width: 100%; max-height: 70vh;">
-
-                 <canvas id="visualizationChart"></canvas>
-
+            <div class="chart-container-wrapper">
+                <canvas id="visualizationChart"></canvas>
             </div>
 
         </div>
@@ -348,10 +393,25 @@
         <h3 class="section-title" style="margin-top:14px;">השוואת קבוצות</h3>
         <div id="draftComparison" class="card"></div>
 
-        <h3 class="section-title" style="margin-top:14px;">אנליטיקות דראפט</h3>
-        <div class="card" style="margin-bottom:12px; padding: 12px; text-align:center;">
-            <label for="analyticsHighlight" style="margin-left:6px; font-weight:600;">🎯 הדגשת קבוצה:</label>
-            <select id="analyticsHighlight" class="control-button" style="min-width: 220px;" onchange="updateAnalyticsHighlight()"></select>
+        <h3 class="section-title" style="margin-top:24px;">
+            <span style="font-size: 24px;">📊</span> אנליטיקות דראפט מתקדמות
+        </h3>
+        <div class="analytics-header-card">
+            <div class="analytics-controls">
+                <div class="control-group">
+                    <label for="analyticsHighlight">
+                        <span class="control-icon">🎯</span>
+                        <span class="control-label">הדגש קבוצה ספציפית:</span>
+                    </label>
+                    <select id="analyticsHighlight" class="analytics-select" onchange="updateAnalyticsHighlight()">
+                        <option value="">ללא הדגשה - הצג הכל</option>
+                    </select>
+                </div>
+                <div class="analytics-info">
+                    <span class="info-icon">💡</span>
+                    <span class="info-text">בחר קבוצה כדי להדגיש אותה בכל הגרפים</span>
+                </div>
+            </div>
         </div>
         <div id="draftAnalytics" class="analytics-grid"></div>
 
