--- a/index.html
+++ b/index.html
@@ -375,10 +375,8 @@
                 </div>
             </div>
             <div class="right-pane">
-                <div style="margin-top: 10px;">
-                    <h3 class="section-title">ההרכב שלי</h3>
-                    <div id="myLineupContainer"></div>
-                </div>
+                <h3 class="section-title" style="margin-top: 10px; margin-bottom: 15px;">ההרכב שלי</h3>
+                <div id="myLineupContainer"></div>
             </div>
         </div>
 
