--- a/FPL_Tool.html
+++ b/FPL_Tool.html
@@ -330,7 +330,7 @@
             <h2 id="visualizationTitle"></h2>
 
             <div class="chart-container-wrapper">
-                <canvas id="visualizationChart"></canvas>
+                 <canvas id="visualizationChart"></canvas>
             </div>
 
         </div>
@@ -381,8 +381,10 @@
         </div>
 
         <div style="margin-top: 10px;">
-            <h3 class="section-title">המלצות החתמה</h3>
-            <div id="draftRecommendations" class="card" style="font-size: 0.92em;"></div>
+            <h3 class="section-title">
+                <span style="font-size: 24px;">💡</span> המלצות חכמות להחלפת שחקנים
+            </h3>
+            <div id="draftRecommendations"></div>
         </div>
 
         <h3 class="section-title" style="margin-top:14px;">סגלים לפי קבוצה</h3>
