--- a/index.html
+++ b/index.html
@@ -261,43 +261,45 @@
 
                     <th onclick="sortTable(4)">קבוצה<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(5)">עמדה<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(5)">קבוצת דראפט<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(6)">מחיר<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(6)">עמדה<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(7)">נק'<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(7)">מחיר<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(8)">נק'/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(8)">נק'<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(9)">% בחירה<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(9)">נק'/90<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(10)">דרימטים<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(10)">% בחירה<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(11)">העברות<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(11)">דרימטים<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(12)">DC/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(12)">העברות<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(13)">G+A<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(13)">DC/90<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(14)">xGI<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(14)">G+A<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(15)">דקות<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(15)">xGI<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(16)" title="ההפרש בין G+A ל-xG+xA. חיובי = ביצועי יתר. שלילי = ביצועי חסר.">xDiff<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(16)">דקות<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(17)" title="מדד השפעה, יצירתיות ואיום">ICT<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(17)" title="ההפרש בין G+A ל-xG+xA. חיובי = ביצועי יתר. שלילי = ביצועי חסר.">xDiff<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(18)">בונוס<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(18)" title="מדד השפעה, יצירתיות ואיום">ICT<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(19)">CS<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(19)">בונוס<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(20)">פנדל<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(20)">CS<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(21)">קרן<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(21)">פנדל<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(22)">חופשית<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(22)">קרן<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(23)">משחקים קרובים<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(23)">חופשית<span class="sort-indicator"></span></th>
+
+                    <th onclick="sortTable(24)">משחקים קרובים<span class="sort-indicator"></span></th>
 
                 </tr>
 
