--- a/index.html
+++ b/index.html
@@ -430,6 +430,6 @@
     </div> <!-- end draftTabContent -->
 
     </div>
-    <script src="script.js?v=20250109-draft-api" defer></script>
+    <script src="script.js?v=20250109-v12-final" defer></script>
 </body>
 </html>
