--- a/index.html
+++ b/index.html
@@ -430,6 +430,6 @@
     </div> <!-- end draftTabContent -->
 
     </div>
-    <script src="script.js?v=20250109-optimized" defer></script>
+    <script src="script.js?v=20250109-lineup-bench" defer></script>
 </body>
 </html>
