--- a/index.html
+++ b/index.html
@@ -261,45 +261,49 @@
 
                     <th onclick="sortTable(4)" title="חיזוי נקודות למחזור הבא - מודל מתקדם">xPts (הבא)<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(5)">קבוצה<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(5)" title="חיזוי ML - מודל למידת מכונה מאומן על 99,642 משחקים (Recall 85.6%)">🤖 ML חיזוי<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(6)">עמדה<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(6)">קבוצה<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(7)">מחיר<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(7)" title="קבוצת דראפט (חופשי/שם הקבוצה)">קבוצת דראפט<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(8)">נק'<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(8)">עמדה<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(9)">נק'/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(9)">מחיר<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(10)">% בחירה<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(10)">נק'<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(11)">דרימטים<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(11)">נק'/90<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(12)">העברות<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(12)">% בחירה<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(13)">DC/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(13)">דרימטים<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(14)">G+A<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(14)">העברות<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(15)">xGI<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(15)">DC/90<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(16)">דקות<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(16)">G+A<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(17)" title="ההפרש בין G+A ל-xG+xA. חיובי = ביצועי יתר. שלילי = ביצועי חסר.">xDiff<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(17)">xGI<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(18)" title="מדד השפעה, יצירתיות ואיום">ICT<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(18)">דקות<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(19)">בונוס<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(19)" title="ההפרש בין G+A ל-xG+xA. חיובי = ביצועי יתר. שלילי = ביצועי חסר.">xDiff<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(20)">CS<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(20)" title="מדד השפעה, יצירתיות ואיום">ICT<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(21)">פנדל<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(21)">בונוס<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(22)">קרן<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(22)">CS<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(23)">חופשית<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(23)">פנדל<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(24)">משחקים קרובים<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(24)">קרן<span class="sort-indicator"></span></th>
+
+                    <th onclick="sortTable(25)">חופשית<span class="sort-indicator"></span></th>
+
+                    <th onclick="sortTable(26)">משחקים קרובים<span class="sort-indicator"></span></th>
 
                 </tr>
 
@@ -422,6 +426,7 @@
     </div> <!-- end draftTabContent -->
 
     </div>
+    <script src="04_ml_predictor.js"></script>
     <script src="script.js" defer></script>
 </body>
 </html>
