--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
                     <th onclick="sortTable(3)" title="מדד יציבות (0-100) - מודד עקביות השחקן: 40% כושר, 30% דיוק xG, 20% זמן משחק, 10% שונות נקודות. ככל שגבוה יותר = שחקן יציב">יציבות<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(4)" title="חיזוי נקודות למחזור הבא - מודל מתקדם">xPts (הבא)<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(4)" title="חיזוי טכני - מודל סטטיסטי מבוסס כושר, xG, וקושי יריבים">📊 חיזוי טכני<span class="sort-indicator"></span></th>
 
                     <th onclick="sortTable(5)" title="חיזוי ML - מודל למידת מכונה מאומן על 99,642 משחקים (Recall 85.6%)">🤖 ML חיזוי<span class="sort-indicator"></span></th>
 
