--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
                     <th onclick="sortTable(4)" title="חיזוי טכני - מודל סטטיסטי מבוסס כושר, xG, וקושי יריבים">📊 חיזוי טכני<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(5)" title="חיזוי ML - מודל למידת מכונה מאומן על 99,642 משחקים (Recall 85.6%)">🤖 ML חיזוי<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(5)" title="חיזוי ML - Decision Tree מאומן על 94,391 משחקים (MAE: 0.049, R²: 0.993)">🤖 ML חיזוי<span class="sort-indicator"></span></th>
 
                     <th onclick="sortTable(6)">קבוצה<span class="sort-indicator"></span></th>
 
