--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
                     <th onclick="sortTable(4)" title="חיזוי טכני - מודל סטטיסטי מבוסס כושר, xG, וקושי יריבים">📊 חיזוי טכני<span class="sort-indicator"></span></th>
 
-                    <th onclick="sortTable(5)" title="חיזוי ML - Decision Tree מאומן על 94,391 משחקים (MAE: 0.049, R²: 0.993)">🤖 ML חיזוי<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(5)" title="חיזוי ML Draft - מודל ללא מחיר! מתבסס על: כושר, העברות, דקות, ICT (MAE: 2.14, Within ±2: 60%)">🤖 ML חיזוי<span class="sort-indicator"></span></th>
 
                     <th onclick="sortTable(6)">קבוצה<span class="sort-indicator"></span></th>
 
@@ -426,7 +426,7 @@
     </div> <!-- end draftTabContent -->
 
     </div>
-    <script src="04_ml_predictor.js"></script>
+    <script src="04_ml_predictor_draft.js"></script>
     <script src="script.js" defer></script>
 </body>
 </html>
