--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
                     <th onclick="sortTable(16)">xGI<span class="sort-indicator"></span></th>
                     <th onclick="sortTable(17)">דקות<span class="sort-indicator"></span></th>
                     <th onclick="sortTable(18)" title="הפרש מביצועים בפועל">xDiff<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(19)">ICT<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(20)">בונוס<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(21)">CS<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(19)">ICT/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(20)">בונוס/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(21)">CS/90<span class="sort-indicator"></span></th>
                     <th onclick="sortTable(22)">פנדל<span class="sort-indicator"></span></th>
                     <th onclick="sortTable(23)">קרן<span class="sort-indicator"></span></th>
                     <th onclick="sortTable(24)">חופשית<span class="sort-indicator"></span></th>
