--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
             <label>📅 טווח:</label>
             <select id="statsRange" onchange="processChange()">
                 <option value="all">כל העונה</option>
+                <option value="1">מחזור אחרון</option>
                 <option value="3">3 מחזורים אחרונים</option>
                 <option value="5">5 מחזורים אחרונים</option>
                 <option value="10">10 מחזורים אחרונים</option>
