--- a/index.html
+++ b/index.html
@@ -389,13 +389,19 @@
                     <th onclick="sortTable(15)">G+A<span class="sort-indicator"></span></th>
                     <th onclick="sortTable(16)">xGI<span class="sort-indicator"></span></th>
                     <th onclick="sortTable(17)">דקות<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(18)" title="הפרש מביצועים בפועל">xDiff<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(19)">ICT/90<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(20)">בונוס/90<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(21)">CS/90<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(22)">פנדל<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(23)">קרן<span class="sort-indicator"></span></th>
-                    <th onclick="sortTable(24)">חופשית<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(18)" title="סיכוי למשחק במחזור הבא">סיכוי<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(19)" title="קושי משחקים קרובים (ירוק=קל, צהוב=בינוני, אדום=קשה)">קושי<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(20)" title="הפרש מביצועים בפועל">xDiff<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(21)">ICT/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(22)">בונוס/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(23)">השפעה/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(24)">יצירתיות/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(25)">איום/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(26)">CS/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(27)">ספיגות/90<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(28)">פנדל<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(29)">קרן<span class="sort-indicator"></span></th>
+                    <th onclick="sortTable(30)">חופשית<span class="sort-indicator"></span></th>
                     <th class="fixtures-header">משחקים קרובים</th>
                 </tr>
             </thead>
