fix: add missing FDR column header

--- a/index.html
+++ b/index.html
@@ -573,6 +573,8 @@
                                             class="sort-indicator"></span></th>
                                     <th onclick="sortTable(4)" title="חיזוי טכני">📊 חיזוי<span
                                             class="sort-indicator"></span></th>
+                                    <th title="קושי 3 משחקים קרובים (1=קל, 5=קשה)">קושי (3)<span
+                                            class="sort-indicator"></span></th>
                                     <th onclick="sortTable(5)">קבוצה<span class="sort-indicator"></span></th>
                                     <th onclick="sortTable(6)" title="קבוצת דראפט (חופשי/שם הקבוצה)">קבוצת דראפט<span
                                             class="sort-indicator"></span></th>
