fix: update table column sorting indices in html and script

--- a/index.html
+++ b/index.html
@@ -573,39 +573,39 @@
                                             class="sort-indicator"></span></th>
                                     <th onclick="sortTable(4)" title="חיזוי טכני">📊 חיזוי<span
                                             class="sort-indicator"></span></th>
-                                    <th title="קושי 3 משחקים קרובים (1=קל, 5=קשה)">קושי (3)<span
+                                    <th onclick="sortTable(5)" title="קושי 3 משחקים קרובים (1=קל, 5=קשה)">קושי (3)<span
                                             class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(5)">קבוצה<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(6)" title="קבוצת דראפט (חופשי/שם הקבוצה)">קבוצת דראפט<span
+                                    <th onclick="sortTable(6)">קבוצה<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(7)" title="קבוצת דראפט (חופשי/שם הקבוצה)">קבוצת דראפט<span
                                             class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(7)">עמדה<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(8)">מחיר<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(9)">נק'<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(10)">נק'/90<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(11)">% בחירה<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(12)">דרימטים<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(13)">העברות<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(14)">DC/90<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(15)">G+A<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(16)">xGI<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(17)">דקות<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(18)" title="סיכוי למשחק במחזור הבא">סיכוי<span
+                                    <th onclick="sortTable(8)">עמדה<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(9)">מחיר<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(10)">נק'<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(11)">נק'/90<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(12)">% בחירה<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(13)">דרימטים<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(14)">העברות<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(15)">DC/90<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(16)">G+A<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(17)">xGI<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(18)">דקות<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(19)" title="סיכוי למשחק במחזור הבא">סיכוי<span
                                             class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(19)"
+                                    <th onclick="sortTable(20)"
                                         title="קושי משחקים קרובים (ירוק=קל, צהוב=בינוני, אדום=קשה)">קושי<span
                                             class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(20)" title="הפרש מביצועים בפועל">xDiff<span
+                                    <th onclick="sortTable(21)" title="הפרש מביצועים בפועל">xDiff<span
                                             class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(21)">ICT/90<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(22)">בונוס/90<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(23)">השפעה/90<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(24)">יצירתיות/90<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(25)">איום/90<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(26)">CS/90<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(27)">ספיגות/90<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(28)">פנדל<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(29)">קרן<span class="sort-indicator"></span></th>
-                                    <th onclick="sortTable(30)">חופשית<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(22)">ICT/90<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(23)">בונוס/90<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(24)">השפעה/90<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(25)">יצירתיות/90<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(26)">איום/90<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(27)">CS/90<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(28)">ספיגות/90<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(29)">פנדל<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(30)">קרן<span class="sort-indicator"></span></th>
+                                    <th onclick="sortTable(31)">חופשית<span class="sort-indicator"></span></th>
                                     <th class="fixtures-header">משחקים קרובים</th>
                                 </tr>
                             </thead>
